Potential fix for #108 - spacing in home slideshow widgets

--- a/style.css
+++ b/style.css
@@ -423,7 +423,6 @@ margin-right:2px;
 #columns #slideshow .widgetmiddle, #columns #slideshow .box-number-2 { top: 127px; }
 #columns #slideshow .widgetbottom, #columns #slideshow .box-number-3 { top: 220px; }
 #columns #slideshow .widget h2 { 
-	padding: 7px 20px 5px 6px;
 	font-size: 1.5em;
 	font-weight: bold;
 	color: white;
